fix(layout): [FE-11-refactor-layout] fix scrollbar for sidebar and main content

--- a/src/components/layout/app/AppLayout.scss
+++ b/src/components/layout/app/AppLayout.scss
@@ -2,6 +2,7 @@
 
 .layout-container {
     display: flex;
+    height : 100vh;
 
     aside {
         position  : relative;
@@ -40,16 +41,15 @@
             background-color: #FFF;
             box-shadow      : 0px 4px 6px 0px rgba(0, 0, 0, 0.06);
             padding         : 24px 40px;
-            position        : sticky;
-            top             : 0;
-            width           : 100%;
-            z-index         : 1000;
         }
 
         main {
-            flex      : 1;
-            padding   : 20px;
-            overflow-y: auto;
+            flex           : 1;
+            margin         : 20px;
+            height         : 100vh;
+            overflow-y     : scroll;
+            scrollbar-width: thin;
+            scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
         }
     }
 }
