--- a/src/components/layout/app/partials/Sidebar/Sidebar.scss
+++ b/src/components/layout/app/partials/Sidebar/Sidebar.scss
@@ -1,12 +1,16 @@
 @use '../../../../../styles/scss/utils/variables/'as *;
 
 .sidebar-container {
-    display       : flex;
-    padding       : 10px 40px;
-    flex-direction: column;
-    background    : #FFF;
-    box-shadow    : 0px 4px 6px 0px rgba(0, 0, 0, 0.06);
-    gap           : 32px;
+    display        : flex;
+    padding        : 10px 40px;
+    flex-direction : column;
+    background     : #FFF;
+    box-shadow     : 0px 4px 6px 0px rgba(0, 0, 0, 0.06);
+    gap            : 32px;
+    height         : 100vh;
+    overflow-y     : scroll;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
 
     .sidebar-logo {
 
